# denkirs

./: .gitattributes  README.md  hacs.json  pyproject.toml  requirements_test.txt
.github/workflows/: ci.yml  validate.yml
custom_components/denkirs/: __init__.py  api.py  cloud.py  config_flow.py  const.py  coordinator.py  data.py  diagnostics.py  light.py  manifest.json  models.py  strings.json
custom_components/denkirs/translations/: en.json
tests/: __init__.py  conftest.py  test_api.py  test_cloud.py  test_config_flow.py  test_const.py  test_coordinator.py  test_diagnostics.py  test_init.py  test_light.py
