[project]
name = "denkirs"
version = "1.0.2"
description = "Local Home Assistant integration for Denkirs smart track lighting"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.14.2"

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["custom_components", "tests"]

[tool.ruff.lint]
select = [
    "A",     # flake8-builtins
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "D",     # pydocstyle
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "PL",    # pylint
    "PTH",   # flake8-use-pathlib
    "RET",   # flake8-return
    "RUF",   # ruff-specific
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "UP",    # pyupgrade
    "W",     # pycodestyle warnings
]
ignore = [
    "D203",   # conflicts with D211
    "D213",   # conflicts with D212
    "RUF012", # HA entities use plain mutable _attr_ class defaults by design
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D103", "PLR2004", "S101"]

[tool.ruff.lint.isort]
known-first-party = ["custom_components", "tests"]
force-sort-within-sections = true

[tool.mypy]
python_version = "3.14"
strict = true
warn_unreachable = true
enable_error_code = ["ignore-without-code", "redundant-self", "truthy-iterable"]

[[tool.mypy.overrides]]
module = "tinytuya.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "homeassistant.*"
implicit_reexport = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=custom_components/denkirs --cov-report=term-missing"
